--- a/app/views/friends/_form.html.erb
+++ b/app/views/friends/_form.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 
 <div class="mb-3">
-  <%= form.text_field :frist_name, class:"form-control", placeholder:"First Name" %>
+  <%= form.text_field :first_name, class:"form-control", placeholder:"First Name" %>
 </div>
 
 <div class="mb-3">
