--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,25 +1,13 @@
 <tr id="<%= dom_id friend %>">
-  <th scope="row">
-    <%= friend.frist_name %>
-  </th>
+  <th scope="row"><%= friend.first_name %></th>
 
-  <td>
-    <%= friend.last_name %>
-  </td>
+  <td><%= friend.last_name %></td>
 
-  <td>
-    <%= friend.email %>
-  </td>
+  <td><%= friend.email %></td>
 
-  <td>
-    <%= friend.phone %>
-  </td>
+  <td><%= friend.phone %></td>
 
-  <td>
-    <%= friend.twitter %>
-  </td>
+  <td><%= friend.twitter %></td>
 
-  <td>
-    <%= link_to "View Details", friend %>
-  </td>
+  <td><%= link_to "View Details", friend %></td>
 </tr>
