--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -1,19 +1,22 @@
-<div class="container-fluid py-5 border rounded-3 bg-light">
-  <h1 class="display-5 fw-bold">
-    <%= @friend.frist_name %>
+<div class="card">
+  <h3 class="card-header">
+    <%= @friend.first_name %>
     <%= @friend.last_name %>
-  </h1>
-  <p class="col-md-8 fs-4">
-    <%= @friend.email %> |
-    <%= @friend.phone %> |
-    <%= @friend.twitter %> |
-  </p>
-  </br>
-  <%= link_to "Edit this friend", edit_friend_path(@friend), class:'btn btn-secondary'  %>
-  <%= link_to "Back to friends", friends_path, class:'btn btn-secondary'  %>
-</div>
-
-<div>
-
-  <%= button_to "Destroy this friend", @friend, method: :delete, class:'btn btn-warning'  %>
+  </h3>
+  <div class="card-body">
+    <h5 class="card-title">
+      <%= @friend.email %> |
+      <%= @friend.phone %> |
+      <%= @friend.twitter %> |
+    </h5>
+    <p class="card-text"> 
+      </br>
+      <%= link_to "Edit this friend", edit_friend_path(@friend), class:'btn btn-secondary'  %>
+      <%= link_to "Back to friends", friends_path, class:'btn btn-secondary'  %>
+    </p>
+    
+  </div>
+  <div class="card-footer">
+    <%= button_to "Destroy this friend", @friend, method: :delete, class:'btn btn-warning'  %>
+  </div>
 </div>
