--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,11 +1,13 @@
+<% if user_signed_in? %>
+
 <table class="table table-striped">
   <thead>
     <tr class="table-dark">
-      <th scope="col">First Name</th>
-      <th scope="col">Last Name</th>
+      <th scope="col">Name</th>
       <th scope="col">Phone</th>
       <th scope="col">Email</th>
       <th scope="col">Twitter</th>
+      <!-- <th scope="col">User Id</th> -->
       <th scope="col">Actions</th>
     </tr>
   </thead>
@@ -17,3 +19,10 @@
 </table>
 
 <%= link_to "New friend", new_friend_path, class:'btn btn-secondary' %>
+
+<% else %>
+
+<h1>This is home.</h1>
+<p>Welcome to Friends App.</p>
+
+<% end %>
