--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -9,14 +9,19 @@
       <%= @friend.phone %> |
       <%= @friend.twitter %> |
     </h5>
-    <p class="card-text"> 
-      </br>
-      <%= link_to "Edit this friend", edit_friend_path(@friend), class:'btn btn-secondary'  %>
-      <%= link_to "Back to friends", friends_path, class:'btn btn-secondary'  %>
+    <p class="card-text">
+      <div class="d-flex justify-content-end">
+        <div class="px-2">
+          <%= link_to "Edit", edit_friend_path(@friend), class:'btn btn-outline-primary'  %>
+        </div>
+        <div class="px-2">
+          <%= button_to "Delete", @friend, method: :delete, class:'btn btn-outline-danger'  %>
+        </div>
+      </div>
     </p>
-    
+
   </div>
   <div class="card-footer">
-    <%= button_to "Destroy this friend", @friend, method: :delete, class:'btn btn-warning'  %>
+    <%= link_to "Back to friends", friends_path, class:'btn btn-secondary'  %>
   </div>
 </div>
